[metadata]
name = hgfind
version = file: VERSION
author = Nahin Khan
author_email = mnahinkhan@gmail.com
description = Convert a gene name to human genome coordinates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mnahinkhan/hgfind
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hgfind = hgfind.hgfind:hgfind
